@@ -1,6 +1,12 @@
 devel
 -----
 
+* Fixed issue #12297: ArangoDB 3.6.5 Swagger Error?
+  This issue caused the Swagger UI for displaying the APIs of user-defined Foxx
+  services to remain invisible in the web UI, because of a JavaScript exception.
+  This PR fixes the JavaScript exception, so the services API is displayed
+  again properly.
+
 * Slightly improved the performance of some k-shortest-path queries.
 
 * Added startup option `--rocksdb.encryption-key-rotation` to activate/deactivate
